--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".WelcomeActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
@@ -32,7 +32,8 @@
         </activity>
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
         <activity android:name=".TwoActivity" />
-        <activity android:name=".ThreeActivity"></activity>
+        <activity android:name=".ThreeActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
